tests/diagnostics/catalog/snapshots/ir/IR0041.snap
error[IR0041]: IR_E_INVALID_OPERATOR
 --> tests/diagnostics/catalog/sources/ir/IR0041.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0041
  = help: keep IR validation diagnostics structured and catalog-backed
